# snac

./: README.md
snac_circuits/snac_create_deposit_address/: Nargo.toml
snac_circuits/snac_create_deposit_address/cache/: solidity-files-cache.json
snac_circuits/snac_create_deposit_address/src/: contract.sol  main.nr
snac_circuits/snac_send_token_in_circuit/: Nargo.toml  Prover.toml
snac_circuits/snac_send_token_in_circuit/src/: U256.nr  main.nr
snac_circuits/snac_send_token_out_circuit/: Nargo.toml
snac_circuits/snac_send_token_out_circuit/src/: U256.nr  main.nr  utils.nr
snac_contracts/: foundry.toml  remappings.txt
snac_contracts/broadcast/SnacDeploySepolia.s.sol/11155111/: run-1746798553.json
snac_contracts/broadcast/SnacDeploySepolia.s.sol/17000/: run-1746798880.json  run-1746799417.json  run-1746868555.json  run-1746883012.json  run-latest.json
snac_contracts/script/: SnacDeploySepolia.s.sol
snac_contracts/src/: Snac.sol  SnacDepositAddress.sol  SnacTokenInVerifier.sol  SnacTokenOutVerifier.sol  proof.json  proofSendIn.json  proofSendOut.json
snac_contracts/test/: Snac.t.sol
snac_front/snac_ui/: bun.lockb  package.json  tsconfig.json  vite.config.ts
snac_front/snac_ui/app/: provider.tsx
snac_front/snac_ui/app/circuit/: abi.json  snac_send_token_in_circuit.json
snac_front/snac_ui/public/: snac_send_token_out_circuit.json
snac_relayer/: Cargo.toml
snac_relayer/src/: main.rs  mpt_prove.rs  receipt.rs
snac_relayer/src/mpt/: db.rs  errors.rs  mod.rs  node.rs  trie.rs
snac_relayer/src/mpt/tests/: mod.rs
(+7 files in other folders)
